--- a/src/app/home/teacher-list/teacher-list.component.html
+++ b/src/app/home/teacher-list/teacher-list.component.html
@@ -1,6 +1,6 @@
 <mat-grid-list cols="6" style="flex" gutterSize="10px">
   <mat-grid-tile  [colspan]="1"
-  [rowspan]="1" *ngFor="let teacher of teacheres">
+  [rowspan]="1" *ngFor="let teacher of teacheres" routerLink="/detail/{{teacher.id}}">
     <mat-card>
       <mat-card-header>
         <div mat-card-avatar class="example-header-image"></div>
